# pico-ice-tests

./: CMakeLists.txt  README.md  main.c  rgb_blink.v
